<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_category"
        android:icon="@drawable/ic_menu_category"
        android:title="Category"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/nav_all"
                android:title="@string/title_nav_all"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_restorant"
                android:title="@string/title_nav_restorant"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_coffee"
                android:title="@string/title_nav_coffee"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_sushi"
                android:title="@string/title_nav_sushi"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_pizza"
                android:title="@string/title_nav_pizza"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_sauna"
                android:title="@string/title_nav_sauna"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_hookah"
                android:title="@string/title_nav_hookah"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_night"
                android:title="@string/title_nav_night"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_cinema"
                android:title="@string/title_nav_cinema"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_bowling"
                android:title="@string/title_nav_bowling"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_anticaffe"
                android:title="@string/title_nav_anticaffe"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_sport"
                android:title="@string/title_nav_sport"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_gym"
                android:title="@string/title_nav_gym"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_carwash"
                android:title="@string/title_nav_carwash"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_tire"
                android:title="@string/title_nav_tire"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_carservice"
                android:title="@string/title_nav_carservice"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_typography"
                android:title="@string/title_nav_typography"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_menwear"
                android:title="@string/title_nav_menwear"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_womenwear"
                android:title="@string/title_nav_womenwear"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_kidswear"
                android:title="@string/title_nav_kidswear"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_taxi"
                android:title="@string/title_nav_taxi"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_studying"
                android:title="@string/title_nav_studying"
                app:showAsAction="never"/>
        </menu>

    </item>
</menu>
